--- a/app/views/spree/checkout/existing_payment/_nexio_own_form.html.erb
+++ b/app/views/spree/checkout/existing_payment/_nexio_own_form.html.erb
@@ -1,10 +1,1 @@
-<tr id="<%= dom_id(wallet_payment_source, 'spree')%>" class="<%= cycle('even', 'odd') %>">
-  <td>
-    <%= radio_button_tag "order[wallet_payment_source_id]",
-                          wallet_payment_source.id,
-                          default,
-                          class: "existing-cc-radio" %>
-  </td>
-  <td><%= wallet_payment_source.payment_source.cc_type %></td>
-  <td><%= wallet_payment_source.payment_source.display_number %></td>
-</tr>
+<%= render partial: 'spree/checkout/existing_payment/gateway', locals: local_assigns %>
