Improve 3d secure support

--- a/app/views/solidus_nexio/payments/capture.html.erb
+++ b/app/views/solidus_nexio/payments/capture.html.erb
@@ -1,3 +1,10 @@
-<script>
-  window.parent.postMessage({ type: 'three_d_secure_result', state: '<%= @result.state %>' });
-</script>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title></title>
+</head>
+<body>
+  <script>window.close()</script>
+</body>
+</html>
