Improve logging and admin payment details view

--- a/app/views/spree/admin/payments/source_views/_nexio_own_form.html.erb
+++ b/app/views/spree/admin/payments/source_views/_nexio_own_form.html.erb
@@ -1,23 +1,21 @@
 <fieldset data-hook="credit_card">
   <legend align="center"><%= payment.payment_method.name %></legend>
+  <dl>
+    <dt><%= I18n.t("spree.identifier") %>:</dt>
+    <dd><%= payment.number %></dd>
 
-  <div class="row">
-    <div class="alpha six columns">
-      <dl>
-        <dt><%= I18n.t("spree.identifier") %>:</dt>
-        <dd><%= payment.number %></dd>
+    <% if payment.source.is_a?(Spree::CreditCard) %>
 
-        <% if payment.source.is_a?(Spree::CreditCard) %>
-          <dt><%= Spree::CreditCard.human_attribute_name(:cc_type) %>:</dt>
-          <dd><%= payment.source.cc_type %></dd>
+      <dt><%= Spree::Payment.human_attribute_name(:response_code) %>:</dt>
+      <dd><input type="text" readonly value="<%= payment.transaction_id %>" class="form-control" /></dd>
+      <dt><%= Spree::CreditCard.human_attribute_name(:cc_type) %>:</dt>
+      <dd><%= payment.source.cc_type %></dd>
 
-          <dt><%= Spree::CreditCard.human_attribute_name(:name) %>:</dt>
-          <dd><%= payment.source.name %></dd>
+      <dt><%= Spree::CreditCard.human_attribute_name(:name) %>:</dt>
+      <dd><%= payment.source.name %></dd>
 
-          <dt><%= Spree::CreditCard.human_attribute_name(:last_digits) %>:</dt>
-          <dd><%= payment.source.last_digits %></dd>
-        <% end %>
-      </dl>
-    </div>
-  </div>
+      <dt><%= Spree::CreditCard.human_attribute_name(:last_digits) %>:</dt>
+      <dd><%= payment.source.last_digits %></dd>
+    <% end %>
+  </dl>
 </fieldset>
