ADN-2029 ApplePay is added as a APM

--- a/app/views/spree/checkout/payment/_nexio_apm.html.erb
+++ b/app/views/spree/checkout/payment/_nexio_apm.html.erb
@@ -12,6 +12,7 @@
   <fieldset data-nexio-apm="<%= payment_method.id %>" data-hook="nexio_apm" data-nexio-payment-method="<%= payment_method.preferred_payment_method %>">
     <input name="order[payments_attributes][][nexio_apm_transaction_id]" type="hidden" data-hook="nexio_apm_transaction_id" />
     <input name="payment_source[<%= payment_method.id %>][gateway_payment_profile_id]" type="hidden" data-hook="gateway_payment_profile_id" />
+    <input name="payment_source[<%= payment_method.id %>][kind]" value="<%= payment_method.preferred_payment_method.underscore %>" type="hidden" data-hook="payment_source_kind" />
   </fieldset>
   <%= setup_nexio_apm(payment_method, order, user: user) %>
 <% end %>
